# particle-pomdp

./: .gitignore  CITATION.bib  LICENSE  README.md  __init__.py  particle-pomdp.yml  pyproject.toml
baselines/: README.md  __init__.py  common.py
baselines/dsmc/: __init__.py  arch.py  config.py  dsmc.py  utils.py
baselines/dvrl/: README.md  __init__.py  arch.py  config.py  dvrl.py  main.py  utils.py
baselines/envs/: __init__.py  cartpole.py  core.py  lightdark2d.py  pendulum.py
baselines/sac/: README.md  __init__.py  arch.py  base.py  config.py  core.py  sac.py  utils.py
baselines/slac/: README.md  __init__.py  arch.py  config.py  slac.py  utils.py
examples/: 1d_light_dark.py  2d_light_dark.py  light_dark.py  partially_observed_pendulum.py  pendulum.py  smc_attn_ball_catching.py
examples/1d_light_dark/: environment.py  main.py  main_csmc.py  main_csmc_test.py  main_smc.py
examples/2d_light_dak/: environment.py  main.py  (+2 more)
experiments/: README.md  common.py  dsmc_experiment.py  dsmc_experiment_run.sh  dual_smc.py  dvrl_experiment.py  nrsmc_experiment.py  nsmc.py  nsmc_experiment.py  ours.py  ours_smc.py  p3o_attention_experiment.py  p3o_experiment.py  p3o_recurrent_experiment.py  post_process.py  run.sh  run_dsmc.py  run_ncsmc.py  run_nsmc.py  run_slac.py  slac.py  slac_experiment.py  slac_experiment_run.sh  slurm.sh  wandb_logger.py  wandb_postproc.py
ppomdp/: arch.py  bijector.py  config.py  core.py  csmc.py  flow.py  gauss.py  policy.py  smc.py  utils.py
tests/: test_backward_tracing.py  test_lqg.py  test_replay_buffer.py  test_rsmc.py  test_smc.py
(+117 files in other folders)
