[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ppomdp"
version = "0.0.1"
authors = [
  {name = "Hany Abdulsamad", email = "hany@robot-learning.de"},
  {name = "Sahel Iqbal", email = "sahel13miqbal@proton.me"},
]
dependencies = [
  "jax",
  "flax",
  "chex",
  "distrax",
  "optax",
]

[project.optional-dependencies]
test = ["pytest"]
